# backtester

./: .gitignore  CMakeLists.txt  README.md  main.cpp
DataHandling/: AbstractData.h  MarketDataFrame.cpp  MarketDataFrame.h  YahooCSVReader.cpp  YahooCSVReader.h
Events/: EventFIll.cpp  EventFill.h  EventMarket.cpp  EventMarket.h  EventOrder.cpp  EventOrder.h  EventSignal.cpp  EventSignal.h  Events.h
ExecutionHandler/: AbstractExecutionHandler.h
Infrastructure/: EventList.cpp  EventList.h  Execution.cpp  Execution.h
Strategy/: AbstractStrategy.h
